--- a/templates/data-product.html
+++ b/templates/data-product.html
@@ -9,6 +9,25 @@
     </head>
 <body>
     <div class="container">
+        <div class="row mb-5"></div>
+        <div class="row">
+            
+            <div class="col-12">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link" href="{% url 'welcome' %}">Home</a>
+                            <a class="nav-link" href="{% url 'dataproduct' %}">Product</a>
+                            <a class="nav-link" href="{% url 'tentang' %}">About Us</a>
+                            <a class="nav-link" href="{% url 'pemesanan' %}">Pesanan</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
         <h2 class="mt-4">Data Product</h2>
         <a class="btn btn-primary mb-2" href="{% url 'tambah_product' %}">Tambah Product</a>
     {% if messages %}
