--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hallo nama saya {{ name }}</h1>
+    <h1>Selamat Datang Di</h1>
 </body>
 </html>
