--- a/templates/products/data-product.html
+++ b/templates/products/data-product.html
@@ -9,7 +9,7 @@
     {% endfor %}
     {% endif %}
     <form action="{% url 'tambah_product' %}" method="POST">
-        <table class="table table-striped table-hover">
+        <table class="table table-striped table-hover" width="100%">
             <thead class="table-dark">
                 <tr>
                     <th>No</th>
@@ -26,10 +26,10 @@
                 <tr>
                     <td>{{ dataproduct.idproduk }}</td>
                     <td>
-                        <img style="width: 300px;" src="{{ dataproduct.gambar }}" alt="">
+                        <img style="width: 200px;" src="{{ dataproduct.gambar }}" alt="">
                     </td>
                     <td>{{ dataproduct.namaproduct }}</td>
-                    <td>{{ dataproduct.hargaproduct }}</td>
+                    <td>Rp. {{ dataproduct.hargaproduct }}</td>
                     <td>{{ dataproduct.deskripsi }}</td>
                     <td>{{ dataproduct.stok }}</td>
                     <td>
