Authentication, Landing Page

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,17 +2,27 @@
 {% block content %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img {
+            display: block;
+          margin-left: auto;
+          margin-right: auto; 
+        }
+    </style>
 </head>
+
 <body>
     <h1 style="text-align: center;">Selamat Datang</h1>
     <h1 style="text-align: center;">Website Penjualan dan Pembelian Makanan</h1>
     <h1 style="text-align: center;">RPL Kelompok 15</h1>
-    <img ;" src="/static/assets/dist/img/makanan.jpeg" alt="">
+    <img width="500px" src="/static/assets/dist/img/makanan.jpeg" alt="">
 </body>
+
 </html>
 {% endblock %}
