--- a/templates/user/produk.html
+++ b/templates/user/produk.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Data Produk</h1>
+    <h1>Data Makanan</h1>
     <div class="card-body">
         <table width="100%">
             <thead>
@@ -48,7 +48,7 @@
                 <div>
                     <tr>
                         <td>
-                            {{ user.stok }}
+                            Stok : {{ user.stok }}
                         </td>
                     </tr>
                 </div>
