--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -148,16 +148,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-widget="fullscreen" href="#" role="button">
-                        <i class="fas fa-expand-arrows-alt"></i>
+                    <a href="{% url 'logout' %}" class="nav-link"> 
+                        <p>
+                            Logout
+                        </p>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#"
-                        role="button">
-                        <i class="fas fa-th-large"></i>
-                    </a>
-                </li>
+
             </ul>
         </nav>
         <!-- /.navbar -->
@@ -212,7 +209,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             
                         </li>
                         <li class="nav-item">
-                            <a href="{% url 'dataproduct' %}" class="nav-link">
+                            <a href="{% url 'produk' %}" class="nav-link">
                                 <i class="nav-icon fas fa-utensils"></i>
                                 <p>
                                     Daftar Makanan
