--- a/templates/products/update-product.html
+++ b/templates/products/update-product.html
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html' %}
+{% extends 'layout/baseadmin.html' %}
 {% block content %}
 <div class="card">
     <div class="card-body">
