--- a/templates/layout/baseadmin.html
+++ b/templates/layout/baseadmin.html
@@ -147,6 +147,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
                     </div>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'logout' %}" class="nav-link"> 
+                        <p>
+                            Logout
+                        </p>
+                    </a>
+                </li>
 
             </ul>
         </nav>
@@ -193,27 +200,18 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
                         <li class="nav-item">
-                            <a href="{% url 'welcome' %}" class="nav-link">
-                                <i class="nav-icon fas fa-home"></i>
-                                <p>
-                                    Home
-                                </p>
-                            </a>
-                            
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'produk' %}" class="nav-link">
+                            <a href="{% url 'dataproduct' %}" class="nav-link">
                                 <i class="nav-icon fas fa-utensils"></i>
                                 <p>
-                                    Daftar Makanan
+                                    Data Makanan
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="{% url 'pemesanan' %}" class="nav-link">
-                                <i class="nav-icon fas fa-shopping-cart"></i>
+                            <a href="{% url 'tambah_product' %}" class="nav-link">
+                                <i class="nav-icon fas fa-plus"></i>
                                 <p>
-                                    Pesan Makanan
+                                    Tambah Data Makanan
                                 </p>
                             </a>
                         </li>
