--- a/templates/layout/index.html
+++ b/templates/layout/index.html
@@ -248,7 +248,7 @@ padding-top: 5rem;
 
           <div class="col-8">
 
-            <p></p>
+            <p>Ini merupakan project presentasi dalam mata kuliah Rekayasa Perangkat Lunak yang dimana di rancang dan di buat oleh kelompok 1.5 Kelompok ini terdiri atas 6 orang yang diantaranya Angel, Berkat, Berlian, Carlos, Petrus, dan Silas. Ini merupakan studi kasus yang kami angkat untuk dan kami rancang sehingga terciptalah website pembelian makanan online ini.</p>
           </div>
 
         </div>
