--- a/templates/layout/baseadmin.html
+++ b/templates/layout/baseadmin.html
@@ -122,29 +122,24 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 </li>
                 <!-- Notifications Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <!--<a class="nav-link" data-toggle="dropdown" href="#">
+                    <a class="nav-link" data-toggle="dropdown" href="#">
                         <i class="far fa-bell"></i>
-                        <span class="badge badge-warning navbar-badge">15</span>
-                    </a>-->
+                        {% if list_notifikasi %}
+                            <span class="badge badge-warning navbar-badge">{{ jumlah_notifikasi }}</span>
+                        {% endif %}
+                    </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                        <span class="dropdown-header">15 Notifications</span>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-envelope mr-2"></i> 4 new messages
-                            <span class="float-right text-muted text-sm">3 mins</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-users mr-2"></i> 8 friend requests
-                            <span class="float-right text-muted text-sm">12 hours</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-file mr-2"></i> 3 new reports
-                            <span class="float-right text-muted text-sm">2 days</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+                        {% if list_notifikasi %}
+                            <span class="dropdown-header">{{ jumlah_notifikasi }} Notifications</span>
+                            <div class="dropdown-divider"></div>
+                            {% for ln in list_notifikasi %}
+                                <a href="{% url 'notifikasi_terbaca' ln.idnotifikasi %}" class="dropdown-item">
+                                    <i class="fas fa-bell mr-2"></i>{{ ln.pesannotifikasi }}
+                                </a>
+                            {% endfor %}
+                        {% else %}
+                            <span class="dropdown-header">Tidak Ada Notifikasi</span>
+                        {% endif %}
                     </div>
                 </li>
                 <li class="nav-item">
@@ -199,6 +194,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
+                        <li class="nav-item">
+                            <a href="{% url 'penjualan' %}" class="nav-link">
+                                <i class="nav-icon fas fa-swatchbook"></i>
+                                <p>
+                                    Data Penjualan
+                                </p>
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a href="{% url 'dataproduct' %}" class="nav-link">
                                 <i class="nav-icon fas fa-utensils"></i>
