--- a/templates/products/data-product.html
+++ b/templates/products/data-product.html
@@ -8,6 +8,7 @@
     {% endfor %}
     {% endif %}
     <form action="{% url 'tambah_product' %}" method="POST">
+        <h1>Data Makanan</h1>
         <table class="table table-striped table-hover" width="100%">
             <thead class="table-dark">
                 <tr>
