--- a/templates/products/tambah-product.html
+++ b/templates/products/tambah-product.html
@@ -12,7 +12,7 @@
         {% endif %}
         <form action="{% url 'postproduct' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <h1>Tambah Data Product</h1>
+            <h1>Tambah Data Makanan</h1>
             <div class="form-group">
                 <p>Id Product</p>
                 <input class="form-control" type="text" name="idproduk" id="idproduk" maxlength="4" required>
