--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -28,10 +28,10 @@
         <div class="card bg-glass">
           <div class="card-body px-4 py-5 px-md-5">
             {% if messages %}
-          {% for message in messages %}
-          <p>{{ message }}</p>
-          {% endfor %}
-  {% endif %}
+              {% for message in messages %}
+                <p class="alert alert-warning alert-dismissible fade show" role="alert">{{ message }}</p>
+              {% endfor %}
+            {% endif %}
   <div class="container">
     <h2>Login Admin</h2>
     <form method="post">
