--- a/templates/penjualan/penjualan.html
+++ b/templates/penjualan/penjualan.html
@@ -1,12 +1,21 @@
 {% extends 'layout/baseadmin.html' %} {% block content %}
+{% if messages %}
+  {% for message in messages %}
+    <p class="alert alert-warning alert-dismissible fade show" role="alert">{{ message }}</p>
+  {% endfor %}
+{% endif %}
 <div class="container">
-  <h1>Daftar Penjualan</h1>
+  <a target="_blank" class="btn btn-danger" href="{% url 'export_pdf_penjualan' %}">
+    Ekspor PDF
+    <i class="far fa-file-pdf"></i>
+</a>
+  <h1>Data Penjualan</h1>
   <table class="table table-striped table-hover">
     <thead class="table-dark">
       <tr>
         <th>Nama Produk</th>
         <th>Harga Jual</th>
-        <th>Stok</th>
+        <th>Stok Tersisa</th>
         <th>Total Terjual</th>
       </tr>
     </thead>
@@ -21,5 +30,6 @@
       {% endfor %}
     </tbody>
   </table>
+  
 </div>
 {% endblock %}
