--- a/templates/products/tambah-product.html
+++ b/templates/products/tambah-product.html
@@ -4,12 +4,11 @@
 
 <div class="card">
     <div class="card-body">
-
         {% if messages %}
-        {% for message in messages %}
-        <p>{{ message }}</p>
-        {% endfor %}
-        {% endif %}
+            {% for message in messages %}
+                <p class="alert alert-warning alert-dismissible fade show" role="alert">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
         <form action="{% url 'postproduct' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <h1>Tambah Data Makanan</h1>
