--- a/templates/products/update-product.html
+++ b/templates/products/update-product.html
@@ -3,10 +3,10 @@
 <div class="card">
     <div class="card-body">
         {% if messages %}
-        {% for message in messages %}
-        <p>{{ message }}</p>
-        {% endfor %}
-        {% endif %}
+            {% for message in messages %}
+                <p class="alert alert-warning alert-dismissible fade show" role="alert">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
         <form action="{% url 'postupdateproduct' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <h1>UPDATE DATA PRODUCT</h1>
