--- a/templates/user/produk.html
+++ b/templates/user/produk.html
@@ -1,73 +1,113 @@
 {% extends 'layout/base.html' %}
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
+<style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  
+    .badan {
+      /* width: 880px; */
+      margin: 35px auto;
+      background-color: white;
+      padding: 20px;
+      overflow: hidden;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+  
+    .badan h2 {
+      color: crimson;
+      border-bottom: 1px solid gainsboro;
+      margin: 5px;
+      margin-bottom: 13px;
+    }
+  
+    .list-produk {
+      border: 1px solid gainsboro;
+      padding: 10px;
+      width: 200px;
+      margin-bottom: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .list-produk:hover {
+      transition-duration: 700ms;
+      box-shadow: 5px 5px gainsboro;
+    }
+  
+    .list-produk img {
+        width: 100%;
+        height: 175px;
+        display: block;
+        margin-bottom: 5px;
+    }
+  
+    .list-produk h4,
+    .list-produk h5 {
+      color: crimson;
+      text-align: center;
+      margin-bottom: 5px;
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <h1>Data Makanan</h1>
-    <div class="card-body">
-        <table width="100%">
-            <thead>
-                {% for user in produk %}
-                <div class="form-group">
-                    <tr>
-                        <td rowspan="6">
-                            <img style="width: 200px;" src="{{ user.gambar }}" alt="">
-                        </td>
-                    </tr>
-
-                </div>
-                <div>
-                    <tr>
-                        <td>
-                            {{ user.namaproduct}}
-                        </td>
-                    </tr>
-                </div>
-                <div>
-                    <tr>
-                        <td>
-                            Rp. {{ user.hargaproduct}}
-                        </td>
-                    </tr>
-                </div>
-                <div>
-                    <tr>
-                        <td>
-                            {{ user.deskripsi }}
-                        </td>
-                    </tr>
-                </div>
-                <div>
-                    <tr>
-                        <td>
-                            Stok : {{ user.stok }}
-                        </td>
-                    </tr>
-                </div>
-                <tr>
-                    <td>
-                        <a class="btn btn-primary" href="{% url 'pemesanan' %}">
-                            Tambahkan Kedalam Pesanan
-                            <i class="fa fa-plus">
-
-                            </i>
-                        </a>
-
-                    </td>
-                </tr>
-                {% endfor %}
-            </thead>
-        </table>
+    .list-produk p {
+      color: black;
+      text-align: center;
+      margin-bottom: 5px;
+      font-size: 80%;
+    }
+  
+    .tombol {
+      text-decoration: none;
+      border-radius: 7px;
+      padding: 7px;
+      display: block;
+      width: 100%;
+      margin-top: auto;
+      text-align: center;
+      color: white;
+    }
+  
+    .tombol:hover {
+      background-color: black;
+      transition-duration: 700ms;
+    }
+  
+    .tombol-detail {
+      background-color: green;
+    }
+  
+    .tombol-beli {
+      background-color: crimson;
+    }
+  </style>
+  <body>
+    <h2>Data Makanan</h2>
+    <div class="card-header">
+			<div class="card-tools">
+				<form action="">
+					<input  placeholder="Search Produk" type="text" name="search"
+						class="from-control">
+				</form>
+			</div>
+	    </div>
+    <div class="badan">
+        {% for user in produk %}
+        <div class="list-produk">
+        <img src="{{ user.gambar }}" alt="" />
+        <h4>{{ user.namaproduct }}</h4>
+        <h5>Rp.{{ user.hargaproduct }}</h5>
+        <p>Stok : {{ user.stok }}</p>
+        <p>{{ user.deskripsi }}</p>
+        <a class="tombol tombol-beli" href="{% url 'tambahpemesanan' idproduk=user.idproduk %}">Beli</a>
     </div>
-</body>
-
-</html>
-{% endblock %}
+    {% endfor %}
+    </div>
+  </body>
+  {% endblock %}
+  
